--- a/src/routes/Aktualnosci/GaleriaStyle.css
+++ b/src/routes/Aktualnosci/GaleriaStyle.css
@@ -98,20 +98,59 @@
   transition: color 0.3s;
 }
 
-/* Media queries dla responsywności */
-@media (max-width: 1200px) {
-  .container {
-    justify-content: center;
-  }
+.paginationBttns {
+  max-width: 1200px;
+  width: 80%;
+  height: 40px;
+  list-style: none;
+  margin: 0 auto;
+  padding-top: 30px;
+  display: flex;
+  justify-content: center;
+}
 
+.paginationBttns a {
+  padding: 10px;
+  margin: 8px;
+  border-radius: 5px;
+  border: 1px solid #006400;
+  color: #006400;
+  cursor: pointer;
+}
+.paginationBttns a:hover {
+  color: white;
+  background-color: #006400;
+}
+.paginationActive a {
+  color: white;
+  background-color: #006400;
+}
+/* Media queries dla responsywności */
+
+@media (max-width: 1200px) {
   .pics {
     flex: 0 0 calc(50% - 20px);
+  }
+}
+@media (max-width: 1024px) {
+  .galeria h1 {
+    font-size: 45px;
+    padding-top: 80px;
+  }
+  .container {
+    justify-content: center;
   }
 }
 
 @media (max-width: 768px) {
   .container {
     justify-content: center;
+  }
+  .pics {
+    display: block;
+  }
+  .galeria h1 {
+    font-size: 35px;
   }
 
   .pics {
