--- a/src/routes/Klub/ZarzadStyle.css
+++ b/src/routes/Klub/ZarzadStyle.css
@@ -31,3 +31,29 @@
   border-radius: 10px;
   box-shadow: 2px 4px 4px 2px #006400;
 }
+@media (max-width: 1024px) {
+  .containerZarzad h1 {
+    font-size: 50px;
+    padding-top: 50px;
+    opacity: 1;
+  }
+}
+@media (max-width: 768px) {
+  .containerZarzad h1 {
+    font-size: 30px;
+    padding-top: 30px;
+    margin-top: 0;
+  }
+}
+@media (max-width: 567px) {
+  .containerZarzad h1 {
+    font-size: 20px;
+    padding-top: 20px;
+    margin-top: 0;
+  }
+  .Zarzad {
+    display: block;
+    padding-top: 10px;
+    margin: 0 auto;
+  }
+}
